# chronopatch

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
chronopatch/: __init__.py  benchmark.py  forecast.py  series.py
examples/: quickstart.py
tests/: test_chronopatch.py
